<resources>
    <string name="app_name">ResepApp</string>
    <string name="resep_name">resep name</string>
    <string name="bahan">bahan</string>
    <string name="cara">cara</string>
    <string name="bahan_bahan">Bahan-Bahan</string>
    <string name="cara_membuat">Cara Membuat</string>
    <string name="about">About</string>
    <string name="muhamad_arsaludin">Muhamad Arsaludin</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="my_Email">muhamadarsaludin71@gmail.com</string>
</resources>
